# bookmark-manager

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  application.css  com.github.bartzaalberg.bookmark-manager.appdata.xml  com.github.bartzaalberg.bookmark-manager.appdata.xml.in  com.github.bartzaalberg.bookmark-manager.desktop  com.github.bartzaalberg.bookmark-manager.desktop.in  com.github.bartzaalberg.bookmark-manager.gschema.xml  com.github.bartzaalberg.bookmark-manager.pkexec.policy  com.github.yourusername.yourrepositoryname.appdata.xml  com.github.yourusername.yourrepositoryname.desktop
data/icons/: icons.gresource.xml
debian/: changelog  control
po/: LINGUAS  POTFILES  com.github.bartzaalberg.bookmark-manager.pot  fr.po  pl.po  pt.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  nl.po  pt.po
src/: Application.vala  Bookmark.vala  BookmarkListManager.vala  BookmarkManager.vala  BookmarkManagerWindow.vala  Bookmarks.vala  ConfigFileReader.vala  Constants.vala  ListBox.vala  ListBoxRow.vala  MainWindow.vala  PreferencesDialog.vala  StackManager.vala  hello-again.vala  welcomeView  welcomeView.vala
src/Components/: BookmarkForm.vala  BookmarkFormCheckButton.vala  BookmarkFormEntry.vala  BookmarkFormLabel.vala  HeaderBar.vala  HeaderLabel.vala  Terminal.vala
src/DesktopFileManager/: DesktopFileApplication.vala  DesktopFileManager.vala
src/Dialogs/: Alert.vala  Cheatsheet.vala  Confirm.vala  DeleteConfirm.vala  Preferences.vala
src/Polkit/: Application.vala
src/Tests/: BookmarkTest.vala
src/Views/: AddBookmark.vala  EditBookmark.vala  EmptyView.vala  HeaderBar.vala  ListBookmarks.vala  NotFoundView.vala  WelcomeView.vala
tests/: BookmarkTest.vala
