install (FILES com.github.bartzaalberg.bookmark-manager.desktop DESTINATION share/applications)
install (FILES com.github.bartzaalberg.bookmark-manager.appdata.xml DESTINATION share/metainfo/)

install (FILES icons/16/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/16x16/apps)
install (FILES icons/24/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/24x24/apps)
install (FILES icons/32/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/32x32/apps)
install (FILES icons/48/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/48x48/apps)
install (FILES icons/32/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/32x32/apps)
install (FILES icons/64/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/64x64/apps)
install (FILES icons/128/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/128x128/apps)

install (FILES icons/64/com.github.bartzaalberg.bookmark-manager.svg DESTINATION share/icons/hicolor/scalable/apps)
